<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/YInMnBlue"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="140dp"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="405dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="140dp"
        android:baselineAligned="false"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.454"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:ignore="MissingConstraints">

        <Button
            android:id="@+id/button"
            android:layout_width="298dp"
            android:layout_height="60dp"
            android:onClick="bmiCalculator"
            android:text="@string/Activity1"
            android:textAlignment="center"
            android:textSize="20sp"
            app:iconSize="18dp" />

        <Button
            android:id="@+id/button2"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:onClick="BMIChart"
            android:text="@string/Activity2"
            android:textSize="20sp" />

        <Button
            android:id="@+id/button3"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:onClick="healthTip"
            android:text="@string/Activity3"
            android:textSize="20sp" />

        <Button
            android:id="@+id/button4"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:onClick="aboutApp"
            android:text="@string/Activity4"
            android:textSize="20sp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>