<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/YInMnBlue"
    tools:context=".BMICalculator">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <!-- Input for weight -->
        <EditText
            android:id="@+id/weightInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="Height"
            android:background="@color/white"
            android:hint="@string/weight_hint"
            android:inputType="numberDecimal"
            android:minHeight="48dp"
            android:paddingLeft="10dp"
            android:textColor="@color/black"
            android:textColorHint="#546E7A"
            android:textSize="16sp"
            tools:ignore="VisualLintTextFieldSize" />

        <!-- Input for height -->
        <EditText
            android:id="@+id/heightInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:autofillHints="Weight"
            android:background="@color/white"
            android:hint="@string/height_hint"
            android:inputType="numberDecimal"
            android:minHeight="48dp"
            android:paddingLeft="10dp"
            android:textColor="@color/black"
            android:textColorHint="#546E7A"
            android:textSize="16sp"
            tools:ignore="VisualLintTextFieldSize" />

        <!-- Button to calculate BMI -->
        <Button
            android:id="@+id/calculateBMIButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:onClick="calculate"
            android:text="@string/calculate_btn" />

        <!-- TextView to display the BMI result -->
        <TextView
            android:id="@+id/bmiResult"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/result_text"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>